* Weapon Stones
** Burning Powerstone (Mage, Cleric) - High
** Ancient Burning Powerstone (Mage, Cleric) - High
** Flaring Glyph (Mage, Cleric) - Medium
** Exquisite Oilstone (Warrior, Rogue) - High
** Ancient Equisite Oilstone (Warrior, Rogue) - High
** Exquisite Whetstone (Warrior, Rogue) - High
** Fine Whetstone (Warrior, Rogue) - Medium
** Lightning Glyph (Warrior, Rogue) - Medium
* Potions/Vials
** Herioc Brightsurge Vial (Mage, Cleric) - High
** Ancient Herioc Brightsurge Vial (Mage, Cleric) - High
** Herioc Powersurge Vial (Warrior, Rogue) - High
** Ancient Herioc Powersurge Vial (Warrior, Rogue) - High
** Herioc Enduring Vial (All) - High
** Ancient Herioc Enduring Vial (All) - High
** Vial of Earth Resistance (All) - High
** Vial of Fire Resistance (All) - High
** Vial of Water Resistance (All) - High
** Vial of Death Resistance (All) - High
** Mighty Powersurge Vial (Warrior, Rogue) - Medium
* Other/Armor
** Performance Insoles (All) - High
** Cusioned Insoles (All) - High
** Planar Protection (All) - High
** Thick Armor Plating (Warrior, Rogue, Cleric : Tank) - High
** Poisonous Coating (Warrior, Rogue) - High

System
* New: Added a new slash command /kbmbuffs. You can macro this with %t or manually type a name to return a list of buffs with KBM ID's on that Unit. (Players or NPC's)
* Change: Ability IDs have been changed to the new format for Rift 1.9 and above. This will cause compatibility issues with older KBMs.
* Change: Buff Add events triggered for already cached buffs are now ignored.
* Change: Updated LibSRM to 1.2.0 which now includes LibUnitChange 2.1
* Removed: Global reference to bDetails in Buff Remove handlers.
* Removed: Global reference to TriggerObj in Buff Remove handlers.
* Removed: Global reference to TriggerObj in Buff Add handlers.
* Removed: Global reference to TriggerMod in Buff Add handlers.

Cast Bars