@@ -132,10 +132,10 @@ function KBMLM.SetMain_Lang()
 	KBM.Language.ReadyCheck.Combat:SetFrench("Cacher en combat.")
 	KBM.Language.ReadyCheck.Solo = KBM.Language:Add("Hide while playing solo.")
 	KBM.Language.ReadyCheck.Solo:SetGerman("Im Solospiel verstecken.")
-	KBM.Language.ReadyCheck.Solo:SetFrench("Cacher en jouage solo.")
+	KBM.Language.ReadyCheck.Solo:SetFrench("Cacher en jeu solo.")
 	KBM.Language.ReadyCheck.Unlock = KBM.Language:Add("Unlock Icon Bar.")
 	KBM.Language.ReadyCheck.Unlock:SetGerman("Fenster ist verschiebbar.")
-	KBM.Language.ReadyCheck.Unlock:SetFrench("Débloquer Bar Icone.")
+	KBM.Language.ReadyCheck.Unlock:SetFrench("Débloquer la barre d'icône.")
 	KBM.Language.ReadyCheck.Hidden = KBM.Language:Add("Only show during Rift Ready Checks")
 	KBM.Language.ReadyCheck.Hidden:SetFrench("Afficher seulement durant Rift Ready Checks")
 	
